// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`/shop/[shopId]/resources/resource/[resourceId] > GET > does not return the quantity if the resourceQuantity is not public and the user is a customer 1`] = `
{
  "active": true,
  "costPerProcessingTime": null,
  "costPerTime": null,
  "costPerUnit": null,
  "costingPublic": true,
  "createdAt": Any<String>,
  "description": null,
  "fixedCost": null,
  "id": Any<String>,
  "images": [],
  "materialLabel": null,
  "primaryCategory": null,
  "public": false,
  "quantityPublic": false,
  "resourceTypeId": Any<String>,
  "secondaryCategory": null,
  "shopId": Any<String>,
  "title": "TestResource",
  "updatedAt": Any<String>,
  "userSuppliedMaterial": "NEVER",
}
`;

exports[`/shop/[shopId]/resources/resource/[resourceId] > GET > does not return the quantity if the resourcequantity is not public and the user is a customer 1`] = `
{
  "active": true,
  "costPerProcessingTime": null,
  "costPerTime": null,
  "costPerUnit": null,
  "costingPublic": true,
  "createdAt": Any<String>,
  "description": null,
  "fixedCost": null,
  "id": Any<String>,
  "images": [],
  "materialLabel": null,
  "primaryCategory": null,
  "public": false,
  "quantityPublic": false,
  "resourceTypeId": Any<String>,
  "secondaryCategory": null,
  "shopId": Any<String>,
  "title": "TestResource",
  "updatedAt": Any<String>,
  "userSuppliedMaterial": "NEVER",
}
`;

exports[`/shop/[shopId]/resources/resource/[resourceId] > GET > returns a resource 1`] = `
{
  "active": true,
  "costPerProcessingTime": null,
  "costPerTime": null,
  "costPerUnit": null,
  "costingPublic": true,
  "createdAt": Any<String>,
  "description": null,
  "fixedCost": null,
  "id": Any<String>,
  "images": [],
  "materialLabel": null,
  "primaryCategory": null,
  "public": false,
  "quantity": null,
  "quantityPublic": true,
  "resourceTypeId": Any<String>,
  "secondaryCategory": null,
  "shopId": Any<String>,
  "title": "TestResource",
  "updatedAt": Any<String>,
  "userSuppliedMaterial": "NEVER",
}
`;

exports[`/shop/[shopId]/resources/resource/[resourceId] > PUT > allows a shop-level admin to update a resource 1`] = `
{
  "resource": {
    "active": true,
    "costPerProcessingTime": null,
    "costPerTime": null,
    "costPerUnit": null,
    "costingPublic": true,
    "createdAt": "2024-12-10T21:28:39.294Z",
    "description": null,
    "fixedCost": null,
    "id": "cm4iz4by6002na3hpy6aj0k4r",
    "images": [],
    "materialLabel": null,
    "primaryCategory": null,
    "public": false,
    "quantity": null,
    "quantityPublic": true,
    "resourceTypeId": "cm4iz4by5002la3hp7avhnos6",
    "secondaryCategory": null,
    "shopId": "cm4iz4by3002ha3hpfcsgybsz",
    "title": "New Title",
    "updatedAt": "2024-12-10T21:28:39.300Z",
    "userSuppliedMaterial": "NEVER",
  },
}
`;
